--- a/Rainmaker/Rainmaker/Storyboards/Search.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Search.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvS-T1-ga8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kh7-sV-mSt">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,42 +18,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-yW-8Bg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="169" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-yW-8Bg">
                                 <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="searchViewCell" rowHeight="120" id="6cf-i8-2fk" customClass="SearchTableViewCell" customModule="Rainmaker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="searchViewCell" rowHeight="169" id="6cf-i8-2fk" customClass="SearchTableViewCell" customModule="Rainmaker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="169"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6cf-i8-2fk" id="ejf-f7-R7E">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="168.66666666666666"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qG-fm-fKX">
-                                                    <rect key="frame" x="163.66666666666666" y="35.333333333333336" width="48" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <rect key="frame" x="167" y="53.666666666666664" width="41.333333333333343" height="23.333333333333336"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="qRa-kU-JmH">
-                                                    <rect key="frame" x="50" y="79.666666666666671" width="275" height="30"/>
+                                                    <rect key="frame" x="20" y="108.66666666666669" width="335" height="50"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRS-xn-Gce">
-                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
-                                                            <color key="backgroundColor" red="0.35777854920000002" green="0.72812825439999995" blue="0.55316621070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="155" height="50"/>
+                                                            <color key="backgroundColor" red="0.86515177536736887" green="0.86515177536736887" blue="0.86515177536736887" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="ecS-e3-No7"/>
+                                                            </constraints>
                                                             <state key="normal">
-                                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             </state>
                                                             <connections>
                                                                 <action selector="firstBetButtonTapped:" destination="6cf-i8-2fk" eventType="touchUpInside" id="zGn-kj-Oca"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZu-jG-Nfr">
-                                                            <rect key="frame" x="150" y="0.0" width="125" height="30"/>
-                                                            <color key="backgroundColor" red="0.35777854920000002" green="0.72812825439999995" blue="0.55316621070000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <rect key="frame" x="180" y="0.0" width="155" height="50"/>
+                                                            <color key="backgroundColor" red="0.86515177536736887" green="0.86515177536736887" blue="0.86515177536736887" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                             <state key="normal">
-                                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             </state>
                                                             <connections>
                                                                 <action selector="secondBetButtonTapped:" destination="6cf-i8-2fk" eventType="touchUpInside" id="zQF-aD-yk2"/>
@@ -65,8 +69,8 @@
                                                     </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dBW-Od-Uc4">
-                                                    <rect key="frame" x="5" y="5" width="41.666666666666664" height="20.333333333333332"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="14.999999999999998" y="15.000000000000002" width="29.333333333333329" height="16.666666666666671"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -75,11 +79,11 @@
                                                 <constraint firstItem="qRa-kU-JmH" firstAttribute="centerX" secondItem="ejf-f7-R7E" secondAttribute="centerX" id="1bs-eO-el2"/>
                                                 <constraint firstAttribute="bottom" secondItem="qRa-kU-JmH" secondAttribute="bottom" constant="10" id="Jy8-mk-ORG"/>
                                                 <constraint firstItem="6qG-fm-fKX" firstAttribute="centerX" secondItem="ejf-f7-R7E" secondAttribute="centerX" id="Xl5-Jo-cMD"/>
-                                                <constraint firstItem="dBW-Od-Uc4" firstAttribute="top" secondItem="ejf-f7-R7E" secondAttribute="top" constant="5" id="hRt-ql-no9"/>
-                                                <constraint firstAttribute="trailing" secondItem="qRa-kU-JmH" secondAttribute="trailing" constant="50" id="iZb-hb-qkn"/>
-                                                <constraint firstItem="6qG-fm-fKX" firstAttribute="top" secondItem="dBW-Od-Uc4" secondAttribute="bottom" constant="10" id="mdJ-ui-cgN"/>
-                                                <constraint firstItem="qRa-kU-JmH" firstAttribute="leading" secondItem="ejf-f7-R7E" secondAttribute="leading" constant="50" id="pSi-vq-5hF"/>
-                                                <constraint firstItem="dBW-Od-Uc4" firstAttribute="leading" secondItem="ejf-f7-R7E" secondAttribute="leading" constant="5" id="yZm-au-Ooi"/>
+                                                <constraint firstItem="dBW-Od-Uc4" firstAttribute="top" secondItem="ejf-f7-R7E" secondAttribute="top" constant="15" id="hRt-ql-no9"/>
+                                                <constraint firstAttribute="trailing" secondItem="qRa-kU-JmH" secondAttribute="trailing" constant="20" id="iZb-hb-qkn"/>
+                                                <constraint firstItem="6qG-fm-fKX" firstAttribute="top" secondItem="dBW-Od-Uc4" secondAttribute="bottom" constant="22.000000000000156" id="mdJ-ui-cgN"/>
+                                                <constraint firstItem="qRa-kU-JmH" firstAttribute="leading" secondItem="ejf-f7-R7E" secondAttribute="leading" constant="20" id="pSi-vq-5hF"/>
+                                                <constraint firstItem="dBW-Od-Uc4" firstAttribute="leading" secondItem="ejf-f7-R7E" secondAttribute="leading" constant="15" id="yZm-au-Ooi"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -99,12 +103,36 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="NEk-hp-vR0"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search" id="BxO-Ci-mWX"/>
+                    <navigationItem key="navigationItem" title="Search" id="HtB-Z7-WDK"/>
                     <connections>
                         <outlet property="tableView" destination="PBX-yW-8Bg" id="FEO-zS-HvX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cNs-q6-mwb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1258.4000000000001" y="-261.57635467980299"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="xJv-ng-u4i">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Kh7-sV-mSt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search" id="BxO-Ci-mWX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rt6-bs-eK2">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.18431372549019609" green="0.78823529411764703" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RvS-T1-ga8" kind="relationship" relationship="rootViewController" id="VhX-al-J4f"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nPM-cw-WTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="316" y="-261.57635467980299"/>
         </scene>
